Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-14320

main.subselect failed in buildbot, results mismatch

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Critical
    • Resolution: Fixed
    • 10.2(EOL)
    • 10.2.11
    • Tests, MTR
    • None

    Description

      http://buildbot.askmonty.org/buildbot/builders/kvm-bintar-quantal-x86/builds/9389/steps/test/logs/stdio

      main.subselect                           w3 [ fail ]
              Test ended at 2017-11-08 00:30:25
       
      CURRENT_TEST: main.subselect
      /usr/local/mariadb-10.2.11-linux-x86_64/bin/mysqltest: Error on delete of '/usr/local/mariadb-10.2.11-linux-x86_64/mysql-test/var/3/tmp/subselect.out.file.1' (Errcode: 2 "No such file or directory")
      --- /usr/local/mariadb-10.2.11-linux-x86_64/mysql-test/r/subselect.result	2017-11-07 23:06:45.000000000 +0200
      +++ /usr/local/mariadb-10.2.11-linux-x86_64/mysql-test/r/subselect.reject	2017-11-08 00:30:24.834675217 +0200
      @@ -1729,13 +1729,11 @@
       INSERT INTO `t4` (`task_id`, `description`) VALUES (1, 'Daily Check List'),(2, 'Weekly Status');
       select  dbid, name, (date_format(now() , '%Y-%m-%d') - INTERVAL how_often DAY) >= ifnull((SELECT date_format(max(create_date),'%Y-%m-%d') FROM t1 WHERE dbid = b.db_id AND taskid = a.taskgenid), '1950-01-01') from t3 a, t2 b, t4  WHERE dbid = - 1 AND primary_uid = '1' AND t4.task_id = taskid;
       dbid	name	(date_format(now() , '%Y-%m-%d') - INTERVAL how_often DAY) >= ifnull((SELECT date_format(max(create_date),'%Y-%m-%d') FROM t1 WHERE dbid = b.db_id AND taskid = a.taskgenid), '1950-01-01')
      --1	Valid	1
      --1	Valid 2	1
      +-1	Valid	0
      +-1	Valid 2	0
       -1	Should Not Return	0
       SELECT dbid, name FROM t3 a, t2 b, t4 WHERE dbid = - 1 AND primary_uid = '1' AND ((date_format(now() , '%Y-%m-%d') - INTERVAL how_often DAY) >= ifnull((SELECT date_format(max(create_date),'%Y-%m-%d') FROM t1 WHERE dbid = b.db_id AND taskid = a.taskgenid), '1950-01-01')) AND t4.task_id = taskid;
       dbid	name
      --1	Valid
      --1	Valid 2
       drop table t1,t2,t3,t4;
       CREATE TABLE t1 (id int(11) default NULL) ENGINE=MyISAM CHARSET=latin1;
       INSERT INTO t1 VALUES (1),(5);
       
      mysqltest: Result length mismatch
      

      main.subselect_no_exists_to_in

      main.subselect_no_exists_to_in           w4 [ fail ]
              Test ended at 2017-11-08 00:04:07
       
      CURRENT_TEST: main.subselect_no_exists_to_in
      /usr/local/mariadb-10.2.11-linux-i686/bin/mysqltest: Error on delete of '/usr/local/mariadb-10.2.11-linux-i686/mysql-test/var/4/tmp/subselect.out.file.1' (Errcode: 2 "No such file or directory")
      --- /usr/local/mariadb-10.2.11-linux-i686/mysql-test/r/subselect_no_exists_to_in.result	2017-11-07 23:06:45.000000000 +0200
      +++ /usr/local/mariadb-10.2.11-linux-i686/mysql-test/r/subselect_no_exists_to_in.reject	2017-11-08 00:04:07.288349298 +0200
      @@ -1733,13 +1733,11 @@
       INSERT INTO `t4` (`task_id`, `description`) VALUES (1, 'Daily Check List'),(2, 'Weekly Status');
       select  dbid, name, (date_format(now() , '%Y-%m-%d') - INTERVAL how_often DAY) >= ifnull((SELECT date_format(max(create_date),'%Y-%m-%d') FROM t1 WHERE dbid = b.db_id AND taskid = a.taskgenid), '1950-01-01') from t3 a, t2 b, t4  WHERE dbid = - 1 AND primary_uid = '1' AND t4.task_id = taskid;
       dbid	name	(date_format(now() , '%Y-%m-%d') - INTERVAL how_often DAY) >= ifnull((SELECT date_format(max(create_date),'%Y-%m-%d') FROM t1 WHERE dbid = b.db_id AND taskid = a.taskgenid), '1950-01-01')
      --1	Valid	1
      --1	Valid 2	1
      +-1	Valid	0
      +-1	Valid 2	0
       -1	Should Not Return	0
       SELECT dbid, name FROM t3 a, t2 b, t4 WHERE dbid = - 1 AND primary_uid = '1' AND ((date_format(now() , '%Y-%m-%d') - INTERVAL how_often DAY) >= ifnull((SELECT date_format(max(create_date),'%Y-%m-%d') FROM t1 WHERE dbid = b.db_id AND taskid = a.taskgenid), '1950-01-01')) AND t4.task_id = taskid;
       dbid	name
      --1	Valid
      --1	Valid 2
       drop table t1,t2,t3,t4;
       CREATE TABLE t1 (id int(11) default NULL) ENGINE=MyISAM CHARSET=latin1;
       INSERT INTO t1 VALUES (1),(5);
       
      mysqltest: Result length mismatch
      

      main.subselect_no_mat

      main.subselect_no_mat                    w4 [ fail ]
              Test ended at 2017-11-08 00:04:10
      worker[4] > Restart  - not started
       
      CURRENT_TEST: main.subselect_no_mat
      /usr/local/mariadb-10.2.11-linux-i686/bin/mysqltest: Error on delete of '/usr/local/mariadb-10.2.11-linux-i686/mysql-test/var/4/tmp/subselect.out.file.1' (Errcode: 2 "No such file or directory")
      --- /usr/local/mariadb-10.2.11-linux-i686/mysql-test/r/subselect_no_mat.result	2017-11-07 23:06:45.000000000 +0200
      +++ /usr/local/mariadb-10.2.11-linux-i686/mysql-test/r/subselect_no_mat.reject	2017-11-08 00:04:10.328349237 +0200
      @@ -1736,13 +1736,11 @@
       INSERT INTO `t4` (`task_id`, `description`) VALUES (1, 'Daily Check List'),(2, 'Weekly Status');
       select  dbid, name, (date_format(now() , '%Y-%m-%d') - INTERVAL how_often DAY) >= ifnull((SELECT date_format(max(create_date),'%Y-%m-%d') FROM t1 WHERE dbid = b.db_id AND taskid = a.taskgenid), '1950-01-01') from t3 a, t2 b, t4  WHERE dbid = - 1 AND primary_uid = '1' AND t4.task_id = taskid;
       dbid	name	(date_format(now() , '%Y-%m-%d') - INTERVAL how_often DAY) >= ifnull((SELECT date_format(max(create_date),'%Y-%m-%d') FROM t1 WHERE dbid = b.db_id AND taskid = a.taskgenid), '1950-01-01')
      --1	Valid	1
      --1	Valid 2	1
      +-1	Valid	0
      +-1	Valid 2	0
       -1	Should Not Return	0
       SELECT dbid, name FROM t3 a, t2 b, t4 WHERE dbid = - 1 AND primary_uid = '1' AND ((date_format(now() , '%Y-%m-%d') - INTERVAL how_often DAY) >= ifnull((SELECT date_format(max(create_date),'%Y-%m-%d') FROM t1 WHERE dbid = b.db_id AND taskid = a.taskgenid), '1950-01-01')) AND t4.task_id = taskid;
       dbid	name
      --1	Valid
      --1	Valid 2
       drop table t1,t2,t3,t4;
       CREATE TABLE t1 (id int(11) default NULL) ENGINE=MyISAM CHARSET=latin1;
       INSERT INTO t1 VALUES (1),(5);
       
      mysqltest: Result length mismatch
      
      

      main.subselect_no_opts

      main.subselect_no_opts                   w4 [ fail ]
              Test ended at 2017-11-08 00:04:13
       
      CURRENT_TEST: main.subselect_no_opts
      /usr/local/mariadb-10.2.11-linux-i686/bin/mysqltest: Error on delete of '/usr/local/mariadb-10.2.11-linux-i686/mysql-test/var/4/tmp/subselect.out.file.1' (Errcode: 2 "No such file or directory")
      --- /usr/local/mariadb-10.2.11-linux-i686/mysql-test/r/subselect_no_opts.result	2017-11-07 23:06:45.000000000 +0200
      +++ /usr/local/mariadb-10.2.11-linux-i686/mysql-test/r/subselect_no_opts.reject	2017-11-08 00:04:13.300349176 +0200
      @@ -1732,13 +1732,11 @@
       INSERT INTO `t4` (`task_id`, `description`) VALUES (1, 'Daily Check List'),(2, 'Weekly Status');
       select  dbid, name, (date_format(now() , '%Y-%m-%d') - INTERVAL how_often DAY) >= ifnull((SELECT date_format(max(create_date),'%Y-%m-%d') FROM t1 WHERE dbid = b.db_id AND taskid = a.taskgenid), '1950-01-01') from t3 a, t2 b, t4  WHERE dbid = - 1 AND primary_uid = '1' AND t4.task_id = taskid;
       dbid	name	(date_format(now() , '%Y-%m-%d') - INTERVAL how_often DAY) >= ifnull((SELECT date_format(max(create_date),'%Y-%m-%d') FROM t1 WHERE dbid = b.db_id AND taskid = a.taskgenid), '1950-01-01')
      --1	Valid	1
      --1	Valid 2	1
      +-1	Valid	0
      +-1	Valid 2	0
       -1	Should Not Return	0
       SELECT dbid, name FROM t3 a, t2 b, t4 WHERE dbid = - 1 AND primary_uid = '1' AND ((date_format(now() , '%Y-%m-%d') - INTERVAL how_often DAY) >= ifnull((SELECT date_format(max(create_date),'%Y-%m-%d') FROM t1 WHERE dbid = b.db_id AND taskid = a.taskgenid), '1950-01-01')) AND t4.task_id = taskid;
       dbid	name
      --1	Valid
      --1	Valid 2
       drop table t1,t2,t3,t4;
       CREATE TABLE t1 (id int(11) default NULL) ENGINE=MyISAM CHARSET=latin1;
       INSERT INTO t1 VALUES (1),(5);
       
      mysqltest: Result length mismatch
      

      main.subselect_no_scache

      main.subselect_no_scache                 w4 [ fail ]
              Test ended at 2017-11-08 00:04:19
       
      CURRENT_TEST: main.subselect_no_scache
      /usr/local/mariadb-10.2.11-linux-i686/bin/mysqltest: Error on delete of '/usr/local/mariadb-10.2.11-linux-i686/mysql-test/var/4/tmp/subselect.out.file.1' (Errcode: 2 "No such file or directory")
      --- /usr/local/mariadb-10.2.11-linux-i686/mysql-test/r/subselect_no_scache.result	2017-11-07 23:06:45.000000000 +0200
      +++ /usr/local/mariadb-10.2.11-linux-i686/mysql-test/r/subselect_no_scache.reject	2017-11-08 00:04:19.380349053 +0200
      @@ -1735,13 +1735,11 @@
       INSERT INTO `t4` (`task_id`, `description`) VALUES (1, 'Daily Check List'),(2, 'Weekly Status');
       select  dbid, name, (date_format(now() , '%Y-%m-%d') - INTERVAL how_often DAY) >= ifnull((SELECT date_format(max(create_date),'%Y-%m-%d') FROM t1 WHERE dbid = b.db_id AND taskid = a.taskgenid), '1950-01-01') from t3 a, t2 b, t4  WHERE dbid = - 1 AND primary_uid = '1' AND t4.task_id = taskid;
       dbid	name	(date_format(now() , '%Y-%m-%d') - INTERVAL how_often DAY) >= ifnull((SELECT date_format(max(create_date),'%Y-%m-%d') FROM t1 WHERE dbid = b.db_id AND taskid = a.taskgenid), '1950-01-01')
      --1	Valid	1
      --1	Valid 2	1
      +-1	Valid	0
      +-1	Valid 2	0
       -1	Should Not Return	0
       SELECT dbid, name FROM t3 a, t2 b, t4 WHERE dbid = - 1 AND primary_uid = '1' AND ((date_format(now() , '%Y-%m-%d') - INTERVAL how_often DAY) >= ifnull((SELECT date_format(max(create_date),'%Y-%m-%d') FROM t1 WHERE dbid = b.db_id AND taskid = a.taskgenid), '1950-01-01')) AND t4.task_id = taskid;
       dbid	name
      --1	Valid
      --1	Valid 2
       drop table t1,t2,t3,t4;
       CREATE TABLE t1 (id int(11) default NULL) ENGINE=MyISAM CHARSET=latin1;
       INSERT INTO t1 VALUES (1),(5);
       
      mysqltest: Result length mismatch
      
      

      main.subselect_no_semijoin

      main.subselect_no_semijoin               w4 [ fail ]
              Test ended at 2017-11-08 00:04:26
       
      CURRENT_TEST: main.subselect_no_semijoin
      /usr/local/mariadb-10.2.11-linux-i686/bin/mysqltest: Error on delete of '/usr/local/mariadb-10.2.11-linux-i686/mysql-test/var/4/tmp/subselect.out.file.1' (Errcode: 2 "No such file or directory")
      --- /usr/local/mariadb-10.2.11-linux-i686/mysql-test/r/subselect_no_semijoin.result	2017-11-07 23:06:45.000000000 +0200
      +++ /usr/local/mariadb-10.2.11-linux-i686/mysql-test/r/subselect_no_semijoin.reject	2017-11-08 00:04:26.136348916 +0200
      @@ -1732,13 +1732,11 @@
       INSERT INTO `t4` (`task_id`, `description`) VALUES (1, 'Daily Check List'),(2, 'Weekly Status');
       select  dbid, name, (date_format(now() , '%Y-%m-%d') - INTERVAL how_often DAY) >= ifnull((SELECT date_format(max(create_date),'%Y-%m-%d') FROM t1 WHERE dbid = b.db_id AND taskid = a.taskgenid), '1950-01-01') from t3 a, t2 b, t4  WHERE dbid = - 1 AND primary_uid = '1' AND t4.task_id = taskid;
       dbid	name	(date_format(now() , '%Y-%m-%d') - INTERVAL how_often DAY) >= ifnull((SELECT date_format(max(create_date),'%Y-%m-%d') FROM t1 WHERE dbid = b.db_id AND taskid = a.taskgenid), '1950-01-01')
      --1	Valid	1
      --1	Valid 2	1
      +-1	Valid	0
      +-1	Valid 2	0
       -1	Should Not Return	0
       SELECT dbid, name FROM t3 a, t2 b, t4 WHERE dbid = - 1 AND primary_uid = '1' AND ((date_format(now() , '%Y-%m-%d') - INTERVAL how_often DAY) >= ifnull((SELECT date_format(max(create_date),'%Y-%m-%d') FROM t1 WHERE dbid = b.db_id AND taskid = a.taskgenid), '1950-01-01')) AND t4.task_id = taskid;
       dbid	name
      --1	Valid
      --1	Valid 2
       drop table t1,t2,t3,t4;
       CREATE TABLE t1 (id int(11) default NULL) ENGINE=MyISAM CHARSET=latin1;
       INSERT INTO t1 VALUES (1),(5);
       
      mysqltest: Result length mismatch
      

      Attachments

        Activity

          People

            bar Alexander Barkov
            alice Alice Sherepa
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 0.5h
                0.5h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.