MDEV-14320 main.subselect failed in buildbot, results mismatch

There was a problem in the recent patch for MDEV-10817:
get_date() must "return true" on null_value rather than "return 0"

(forgot to fix Item_sum_hybrid::get_date() after copying and pasting
from Item_sum_hybrid::val_str()).